--- a/public/app/components/road-trip/state-explore/state-explore.html
+++ b/public/app/components/road-trip/state-explore/state-explore.html
@@ -4,8 +4,8 @@
         <div class="full-screen-wrapper">
             <div class="container">
                 <div class="full-screen-block explore">
-                    <h1>My Trips</h1>
-                    <h4>Customize</h4>
+                    <h1>Explore</h1>
+                    <h4>Places</h4>
                     <p ng-if="alltrips.length < 1" class="no-trips-found">Sorry! No Trips found.</p>
                     <p ng-if="alltrips.length > 0">&nbsp;</p>
                 </div>
