--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,7 @@
         <script type="text/javascript" src="app/components/road-trip/my-trips/my-trips.js"></script>
         <script type="text/javascript" src="app/components/road-trip/trip-route/trip-route.js"></script>
         <script type="text/javascript" src="app/components/road-trip/trip-route/trip-route.js"></script>
+        <script type="text/javascript" src="app/components/road-trip/state-explore/state-explore.js"></script>
         <script type="text/javascript" src="app/directives/pit-stop/pit-stop.js"></script>
         <script type="text/javascript" src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
     </head>
