Updated logo as font

--- a/public/app/components/home-page/home-page.html
+++ b/public/app/components/home-page/home-page.html
@@ -1,7 +1,8 @@
 <nav>
     <div class="nav-wrapper">
         <div class="left-nav" ng-click="goHome()">
-            <img src="images/logo.png"/>
+            <!--<img src="images/logo.png"/>-->
+            <h1>roadtripo<h1>
         </div>
         <div class="right-nav">
             <ul>
