--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
         <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" media="screen" title="no title">
         <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css" media="screen" title="no title">
         <link rel="stylesheet" type="text/css" href="styles/css/ngDialog.css">
